[WR-1675] Fix vertical alignment

--- a/src/web/themes/custom/workbc/scss/components/_card-feature.scss
+++ b/src/web/themes/custom/workbc/scss/components/_card-feature.scss
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    align-items: stretch;
+    align-items: center;
     column-gap: 30px;
   }
 
